@@ -217,6 +217,18 @@ void ChromeClientQt::chromeDestroyed()
 {
 }
 
+bool ChromeClientQt::canRunBeforeUnloadConfirmPanel()
+{
+}
+
+bool ChromeClientQt::runBeforeUnloadConfirmPanel(const String& message, Frame* frame)
+{
+}
+
+void ChromeClientQt::closeWindowSoon()
+{
+}
+
 }
 
 
